chore: add dependencies

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,4 +1,4 @@
-# Code Kitchen 🧑‍🍳
+# [Code Kitchen 🧑‍🍳](https://github.com/freewheel/code-kitchen)
 
 **Code Kitchen** is a pure-static live-code playground that is easy to be used in a closed source environment for documenting React UI Libraries.
 
