fix: fullscreen styles

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -21,7 +21,7 @@ Following is a simple demo, it shows:
 
 You can change codes in the code editor and see the changes instantly get rendered in preview panel.
 
-<Playground name="A Moving Dot Demo" dir="v" className="!min-h-[320px]">
+<Playground name="A Moving Dot Demo" dir="v">
 
 ```tsx App.tsx
 import React from "react";
